[package]
name = "bevy_ratatui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
ratatui = { version = "0.26.3", features = ["unstable-widget-ref"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
