[package]
name = "bevy_ratatui"
description = "A Bevy plugin for building terminal user interfaces with Ratatui"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/bevy_ratatui"
documentation = "https://docs.rs/bevy_ratatui"
authors = ["Joshka"]
categories = ["command-line-interface"]
keywords = ["cli", "ratatui", "terminal", "tui", "bevy"]

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "dynamic_linking",
] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
ratatui = { version = "0.26.3", features = ["unstable-widget-ref"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
