[package]
name = "bevy_ratatui"
description = "A Bevy plugin for building terminal user interfaces with Ratatui"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/bevy_ratatui"
documentation = "https://docs.rs/bevy_ratatui"
authors = ["Joshka"]
categories = ["command-line-interface"]
keywords = ["cli", "ratatui", "terminal", "tui", "bevy"]

[dependencies]
bevy = { version = "0.15", default-features = false }
bitflags = "2.8.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
# bevy_input has not been updated to smol_str 0.3 yet
smol_str = "~0.2.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
rand = "0.9.0"
bevy = { version = "0.15", default-features = false, features = ["bevy_state"] }
